<resources>
    <string name="app_name">fitnestX</string>
    <string name="txLogo">Fitnest</string>
    <string name="x">X</string>
    <string name="company_motto">Everybody can train</string>
    <string name="txbtnGetStarted">Get Started</string>
    <string name="onboarding_1_title">Track Your Goal</string>
    <string name="blank"> </string>
    <string name="back_arrow"><![CDATA[<]]></string>
    <string name="next_arrow"><![CDATA[>]]></string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="onboarding_1_illustration">"OnBoarding 1 Illustration "</string>
    <string name="onboarding_1_info">Don\'t worry if you have trouble determining your goals, We can help you determine
        your goals and track your goals
    </string>
</resources>